add new website from server na

--- a/xem-phim-bo/tung-buoc-lun-sau/index.html
+++ b/xem-phim-bo/tung-buoc-lun-sau/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1677,84 +1677,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tom-and-jerry-the-magic-ring" title="Tom and Jerry: The Magic Ring">
+          <a class="list-top-movie-link" href="/phim-moi/nguy-hiem-can-ke" title="Nguy hiểm cận kề">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tom-and-jerry-the-magic-ring-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguy-hiem-can-ke-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tom and Jerry: The Magic Ring
+             Nguy hiểm cận kề
             </span>
             <span class="list-top-movie-item-en">
-             Tom and Jerry: The Magic Ring
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lieu-co-buong-tay" title="Liệu Có Buông Tay">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lieu-co-buong-tay-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Liệu Có Buông Tay
-            </span>
-            <span class="list-top-movie-item-en">
-             Let Go
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/one-piece-omatsuri-danshaku-to-himitsu-no-shima" title="One piece: Omatsuri danshaku to himitsu no shima">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/one-piece-omatsuri-danshaku-to-himitsu-no-shima-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             One piece: Omatsuri danshaku to himitsu no shima
-            </span>
-            <span class="list-top-movie-item-en">
-             One piece: Omatsuri danshaku to himitsu no shima
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chiec-la-ban-vang" title="Chiếc La Bàn Vàng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chiec-la-ban-vang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chiếc La Bàn Vàng
-            </span>
-            <span class="list-top-movie-item-en">
-             The Golden Compass
+             Point Blank
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1765,21 +1699,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-doi-hoan-hao" title="Bộ Đôi Hoàn Hảo">
+          <a class="list-top-movie-link" href="/phim-moi/to-bao-cong-van-phap" title="Tờ Báo Công Văn Pháp">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-doi-hoan-hao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-bao-cong-van-phap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bộ Đôi Hoàn Hảo
+             Tờ Báo Công Văn Pháp
             </span>
             <span class="list-top-movie-item-en">
-             Double Team
+             The French Dispatch
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-co-thuc-su-la-nguoi-manh-nhat-khong" title="Tôi Có Thực Sự Là Người Mạnh Nhất Không?">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-co-thuc-su-la-nguoi-manh-nhat-khong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tôi Có Thực Sự Là Người Mạnh Nhất Không?
+            </span>
+            <span class="list-top-movie-item-en">
+             Jitsu wa Ore, Saikyou deshita? || Am I Actually the Strongest?
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/doraemon-nobita-va-nhung-ban-khung-long-moi" title="Doraemon: Nobita Và Những Bạn Khủng Long Mới">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doraemon-nobita-va-nhung-ban-khung-long-moi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Doraemon: Nobita Và Những Bạn Khủng Long Mới
+            </span>
+            <span class="list-top-movie-item-en">
+             Doraemon the Movie: Nobita's New Dinosaur
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nu-sieu-nhan-phan-5" title="Nữ Siêu Nhân (Phần 5)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-sieu-nhan-phan-5-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nữ Siêu Nhân (Phần 5)
+            </span>
+            <span class="list-top-movie-item-en">
+             Supergirl (Season 5)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
