add new website from server na

--- a/xem-phim-bo/doi-dac-vu-pha-an/index.html
+++ b/xem-phim-bo/doi-dac-vu-pha-an/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1711,18 +1711,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoi-gia-dinh" title="Hội Gia Đình">
+          <a class="list-top-movie-link" href="/phim-moi/bac-thay-thit-nuong-phan-2" title="Bậc thầy thịt nướng (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-gia-dinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-thay-thit-nuong-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hội Gia Đình
+             Bậc thầy thịt nướng (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             The Family
+             Barbecue Showdown (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dieu-tuyet-voi-nhat-cua-chung-ta-ban-dien-anh" title="Điều Tuyệt Vời Nhất Của Chúng Ta (Bản Điện Ảnh)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dieu-tuyet-voi-nhat-cua-chung-ta-ban-dien-anh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Điều Tuyệt Vời Nhất Của Chúng Ta (Bản Điện Ảnh)
+            </span>
+            <span class="list-top-movie-item-en">
+             My Best Summer
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1733,40 +1755,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/star-trek-voyager-phan-1" title="Star Trek: Voyager (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/kinh-thien-dai-nghich-chuyen" title="Kinh Thiên Đại Nghịch Chuyển">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-trek-voyager-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kinh-thien-dai-nghich-chuyen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Star Trek: Voyager (Phần 1)
+             Kinh Thiên Đại Nghịch Chuyển
             </span>
             <span class="list-top-movie-item-en">
-             Star Trek: Voyager (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dai-nao-tay-du" title="Đại Náo Tây Du">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-nao-tay-du-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đại Náo Tây Du
-            </span>
-            <span class="list-top-movie-item-en">
-             Adventure in Journey to the West - Monkey Magic
+             Tik Tok
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1777,21 +1777,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vao-dong-tro-tan" title="Vào Đống Tro Tàn">
+          <a class="list-top-movie-link" href="/phim-moi/am-anh-yeu-va-do-ki" title="Ám ảnh, yêu và đố kị">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vao-dong-tro-tan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-anh,-yeu-va-do-ki-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vào Đống Tro Tàn
+             Ám ảnh, yêu và đố kị
             </span>
             <span class="list-top-movie-item-en">
-             Into The Ashes
+             Obsession
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1799,21 +1799,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/urusei-yatsura" title="URUSEI YATSURA">
+          <a class="list-top-movie-link" href="/phim-moi/lanh-an-phan-4" title="Lãnh Án (Phần 4)">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/urusei-yatsura-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lanh-an-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             URUSEI YATSURA
+             Lãnh Án (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             うる星やつら
+             Cold Case (Season 4)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
