add new website from server na

--- a/xem-phim-moi/bay-nuot-mang/index.html
+++ b/xem-phim-moi/bay-nuot-mang/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1769,18 +1769,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nam-dau-doi-phan-2" title="Năm đầu đời (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/ke-huy-diet-2-ngay-phan-xet" title="Kẻ Hủy Diệt 2: Ngày Phán Xét">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nam-dau-doi-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-huy-diet-2-ngay-phan-xet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Năm đầu đời (Phần 2)
+             Kẻ Hủy Diệt 2: Ngày Phán Xét
             </span>
             <span class="list-top-movie-item-en">
-             Babies (Season 2)
+             Terminator 2: Judgment Day
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bac-si-ngoai-hanh-tinh-phan-1" title="Bác Sĩ Ngoài Hành Tinh (Phần 1)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-si-ngoai-hanh-tinh-phan-1-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bác Sĩ Ngoài Hành Tinh (Phần 1)
+            </span>
+            <span class="list-top-movie-item-en">
+             Resident Alien (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1791,18 +1813,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tron-chay-tu-than" title="Trốn Chạy Tử Thần">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-pho-vo-chu" title="Thành Phố Vô Chủ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tron-chay-tu-than-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-pho-vo-chu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trốn Chạy Tử Thần
+             Thành Phố Vô Chủ
             </span>
             <span class="list-top-movie-item-en">
-             The Running Man
+             City Of Chaos
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1813,40 +1835,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cach-mang-cong-so" title="Cách Mạng Công Sở">
+          <a class="list-top-movie-link" href="/phim-moi/cam-tavanlar" title="Cam Tavanlar">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cach-mang-cong-so-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-tavanlar-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cách Mạng Công Sở
+             Cam Tavanlar
             </span>
             <span class="list-top-movie-item-en">
-             Office Space
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tong-thong-bat-dac-di-phan-3" title="Tổng Thống Bất Đắc Dĩ (Phần 3)">
-           <span class="status">
-            HD 720p Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tong-thong-bat-dac-di-phan-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tổng Thống Bất Đắc Dĩ (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             Designated Survivor (Season 3)
+             Glass Ceilings
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1857,21 +1857,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giac-mo-thanh-pho" title="Giấc mơ thành phố">
+          <a class="list-top-movie-link" href="/phim-moi/cuc-no-hoa-cuc-cung" title="Cục Nợ Hóa Cục Cưng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giac-mo-thanh-pho-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuc-no-hoa-cuc-cung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giấc mơ thành phố
+             Cục Nợ Hóa Cục Cưng
             </span>
             <span class="list-top-movie-item-en">
-             A Beautiful Dream
+             Pawn
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
